# sqlMate

./: .env.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  test-rrp.mjs
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/plans/: text-to-sql.md
docs/: macos-distribution.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: ai_service.rs  connection_manager.rs  mod.rs  query_engine.rs
src-tauri/src/exporter/: exporter.rs
src-tauri/src/importer/: csv_importer.rs  mod.rs  sql_importer.rs
src-tauri/src/security/: mod.rs
src/components/: AiTextToSql.tsx  ColumnVisibilityPopover.tsx  ConnectionModal.tsx  ConnectionRail.tsx  ConnectionSelectorModal.tsx  DataTable.tsx  DatabaseExplorer.tsx  DatabaseSelectorModal.tsx  ExportDialog.tsx  FilterBar.tsx  FilterRow.tsx  ImportDialog.tsx  Logo.tsx  ObjectDetails.tsx  PendingChanges.tsx  QueryResultsTable.tsx  QuickConnection.tsx  QuickNavBar.tsx  SQLEditor.tsx  Sidebar.tsx  SidebarHistory.tsx  SidebarTree.tsx  TabContentQuery.tsx  TabContentStructure.tsx  TabContentTable.tsx  TabManager.tsx  TableFooter.tsx  Toolbar.tsx  WelcomeConnectionManager.tsx  WelcomeScreen.tsx  WelcomeSidebar.tsx
src/hooks/: useConnectionActions.ts  useOutsideClick.ts  useStreamingQuery.ts  useTableMutations.ts
src/store/: databaseStore.deprecated.ts  databaseStore.ts  schemaStore.ts  workspaceStore.ts
src/utils/: urlParser.ts
(+7 files in other folders)
